# odoo-vscode

./: .dockerignore  .env  .flake8  .gitignore  .gitmodules  .pylintrc  Dockerfile  README.md  TODO.md  database.sh  docker-compose.override.template.yaml  docker-compose.test.yaml  docker-compose.yaml  docker-hosted-odoo.yaml  docker-test-env.yaml  pre-commit  pyproject.toml  requirements-dev.txt  requirements.txt  test-env.yaml  vscode.code-workspace
.devcontainer/: dev-vscode.yml  devcontainer.json  docker-vscode.yaml  odoo.code-workspace  vscode.code-workspace
addons/: module-list
addons/template/: .pylintrc  pre-commit  pyproject.toml
addons/template/template_module/: README.md  __manifest__.py
addons/template/template_module/i18n/: template_module.pot
addons/template/template_module/models/: template.py
addons/template/template_module/static/tests/tours/: test_tour.js
addons/template/template_module/tests/: test_example.py  test_final.py  test_tour.py
addons/template/template_module/views/: views.xml
config/: odoo.conf
custom/: module-list
generate/: .env
old_files/: .pylintrc  docker-odoo.py  docker-volume.py  invoke.yaml  launch-personalized.json  odoo.sh
resources/: entrypoint.sh  getaddons.py  odoo-getaddons.py  odoo-test  odoo-test.sh  run_tests.sh  update_workspace.sh
scripts/: db_tune.sql  docker-compose.default.yaml  docker-compose.volumes.yaml  env-template  generate.sh  init.py  launch.attach.json  launch.attach.odoo.json  launch.devcontainer.json  nginx.conf  reset-db.sh  reset-db.sql  setup.py  translations-export.sh
(+45 files in other folders)
