[build-system]
requires = [
	"setuptools>=61",
	"setuptools-scm>=6",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.black]
line-length = 100
skip-string-normalization = 1

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style="preserve"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
